# do-in-time

./: .gitignore  ICON-GENERATION.md  README.md  generate-icons.ps1  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: browser_commands.rs  mod.rs  scheduler_commands.rs  settings_commands.rs  task_commands.rs  window_commands.rs
src-tauri/src/core/: browser_launcher.rs  mod.rs  scheduler.rs  task_executor.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  repository.rs  schema.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/utils/: browser_detector.rs  mod.rs  validation.rs
src/components/: SchedulerStatus.tsx  SettingsModal.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
src/hooks/: useScheduler.ts  useSettings.ts  useTasks.ts
src/services/: tauri-api.ts
src/types/: task.ts
src/utils/: datetime.ts
